# prototype_learning

./: CHANGELOG.md  CONTRIBUTING.md  environment.yml  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
tests/: test_prototype_learning.py
