[tool.poetry]
name = "prototype_learning"
version = "0.1.0"
description = "A package for learning interpretable prototypes for prediction tasks."
authors = ["Anton Matsson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.11.0"
conda-lock = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
